# LoRaFlexSim-1.0.1

./: CHANGELOG.md  Makefile  README.md  README_DEBUG.md  README_FIGURES.md  RUNBOOK_OFFLINE.md  VALIDATION.md  config.ini  execution_notes.md  extract_metrics.sh  generate_figures.py  metrics.py  plot_RL10_reward_vs_pdr_scatter.py  plot_defaults.py  plots.py  pyproject.toml  requirements.txt  run_validate.py
IWCMC/: README.md  overlay_iwcmc_figures.py
article_c/: README.md  __init__.py  all_plot_compare.py  campaign_execution_report.md  campaign_report.json  compare_with_snir.py  diagnose_import.py  make_all_plots.py  plot_cluster_der.py  qa_scientific_checks.py  quick_check.py  report_integrity.py  reproduce_author_results.py  requirements.txt  run_all.py  validate_results.py
config/: experiment_defaults.yaml  mobility_profiles.yaml
docs/: STEP1_SNIR_MODEL.md  STEP2_README.md  energy_profiles.md  equations_flora.md  extension_guide.md  mixra_review.md  qos_cluster_bench_report.md  qos_cluster_review.md  qos_cluster_validation_pipeline.md  qos_validation_reference.json  qos_validation_report.md  snir_assumptions.md  usage_scenarios.md
mobile-sfrd_th/: README.md  pyproject.toml
mobile-sfrd_th/src/mobilesfrdth/: cli.py  scenarios.py
mobile-sfrd_th/src/mobilesfrdth/plotting/: plots.py  utils.py
mobile-sfrd_th/src/mobilesfrdth/simulator/: __init__.py  adr.py  channel.py  engine.py  interference.py  io.py  mab.py  metrics.py  mobility.py
mobile-sfrd_th/tests/: test_cli_contract.py  test_io_and_metrics.py  test_scenarios.py  test_simulator_components.py
(+517 files in other folders)
