[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mobile-sfrd-th"
version = "0.1.0"
description = "Package indépendant pour expériences mobile SFRD_TH"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
  { name = "LoRaFlexSim Team" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
